--- a/leige-mySoft-pom/pom.xml
+++ b/leige-mySoft-pom/pom.xml
@@ -101,6 +101,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19</version>
+                <!--<dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit4</artifactId>
+                        <version>2.19</version>
+                    </dependency>
+                </dependencies>-->
                 <configuration>
                     <!--配置是否跳过测试用例执行-->
                     <!--<skipTests>true</skipTests>-->
