平衡二叉树

--- a/leige-mySoft-algorithm/pom.xml
+++ b/leige-mySoft-algorithm/pom.xml
@@ -13,4 +13,13 @@
     <artifactId>leige-mySoft-algorithm</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+
+        </dependency>
+    </dependencies>
+
 </project>
