--- a/leige-mySoft-AQS/pom.xml
+++ b/leige-mySoft-AQS/pom.xml
@@ -2,16 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>leige-mySoft-pom</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../leige-mySoft-pom/pom.xml</relativePath>
     </parent>
-
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>leige-mySoft-AQS</artifactId>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.10</version>
+        </dependency>
+    </dependencies>
 
 
 
