--- a/leige-mySoft-pom/pom.xml
+++ b/leige-mySoft-pom/pom.xml
@@ -69,6 +69,7 @@
         <module>../leige-mySoft-socket</module>
         <module>../leige-mySoft-algorithm</module>
         <module>../leige-mySoft-zookeeper</module>
+        <module>../leige-mySoft-AQS</module>
     </modules>
 
     <dependencyManagement>
@@ -77,6 +78,12 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.8.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
