--- a/leige-mySoft-AQS/pom.xml
+++ b/leige-mySoft-AQS/pom.xml
@@ -19,6 +19,19 @@
             <artifactId>jol-core</artifactId>
             <version>0.10</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
     </dependencies>
 
 
