--- a/leige-mySoft-pom/pom.xml
+++ b/leige-mySoft-pom/pom.xml
@@ -85,6 +85,12 @@
                 <artifactId>log4j-core</artifactId>
                 <version>2.8.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>1.7.25</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
