--- a/leige-mySoft-RPC/pom.xml
+++ b/leige-mySoft-RPC/pom.xml
@@ -72,5 +72,11 @@
             <artifactId>dubbo</artifactId>
             <version>2.7.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.45</version>
+        </dependency>
     </dependencies>
 </project>
