--- a/leige-mySoft-cglib-parent/cglib/pom.xml
+++ b/leige-mySoft-cglib-parent/cglib/pom.xml
@@ -80,6 +80,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
