--- a/leige-mySoft-AOP/pom.xml
+++ b/leige-mySoft-AOP/pom.xml
@@ -30,6 +30,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
