--- a/leige-mySoft-AQS/pom.xml
+++ b/leige-mySoft-AQS/pom.xml
@@ -37,6 +37,18 @@
              <artifactId>disruptor</artifactId>
              <version>3.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 
 
